@@ -8,42 +8,45 @@ Space Complexity: O(n) where n = length of stack.
 
 class Solution {
 
-    private Integer performOperation(Stack<Integer> numberStack, String operator) {
-        
+    private Integer performOperation(Integer topNumber, Integer bottomNumber, String operation) {
+
         // IMPORTANT: Order matters here. 2nd number is popped first because we're doing based on insertion.
         //  A stack uses FILO, so the top number is the 2nd number.
         //
         //  Also, problem states that input array will always carry a valid expression, so I don't need to 
         //  worry if stack actually has 1 number instead of 2.
-        Integer secondNum = numberStack.pop();
-        Integer firstNum = numberStack.pop();
+
+        if (operation.equals("+")) {
+            return bottomNumber + topNumber;
         
-        if (operator.equals("+")) {
-            return firstNum + secondNum;
+        } else if (operation.equals("-")) {
+            return bottomNumber - topNumber;
+        
+        } else if (operation.equals("*")) {
+            return bottomNumber * topNumber;
+        
+        } else if (operation.equals("/")) {
+            return Integer.valueOf(bottomNumber / topNumber);
         }
-        else if (operator.equals("-")) {
-            return firstNum - secondNum;
-        }
-        else if (operator.equals("*")) {
-            return firstNum * secondNum;
-        }
-        else {
-            return Integer.valueOf((int) firstNum / secondNum);
-        }
+
+        return Integer.valueOf(1);
     }
 
     public int evalRPN(String[] tokens) {
-        Set<String> validOperators = new HashSet<>(Arrays.asList("+", "-", "*", "/"));
+        Set<String> validOperations = Set.of("+", "-", "*", "/");
         Stack<Integer> numberStack = new Stack<>();
 
         for (String elem: tokens) {
 
-            if (validOperators.contains(elem)) {
-                Integer result = performOperation(numberStack, elem);
+            if (!validOperations.contains(elem)) {
+                numberStack.push(Integer.parseInt(elem));
+            } else {
+                Integer topNumber = numberStack.pop();
+                Integer bottomNumber = numberStack.pop();
+
+                Integer result = performOperation(topNumber, bottomNumber, elem);
+
                 numberStack.push(result);
-            }
-            else {
-                numberStack.push(Integer.valueOf(elem));
             }
         }
 
